Updated app theming

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#323434">
+  <meta name="theme-color" content="#08582e">
 </head>
 
 <body>
