Added apple meta tag to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
   integrity="sha384-VcI6S+HIsE80FVM1jgbd6WDFhzKYA0PecD/LcIyMQpT4fMJdijBh0I7Iblaacawc"
   crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="assets/icons/icon-152x152.png" sizes="152x152"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+
   <meta name="theme-color" content="#08582e">
 </head>
 
